--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>X-Compare</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css" />
-      <!-- <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   </head>
   <body>
     <h1>X-Compare</h1>
 
-    <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
