--- a/client/app/products/leaderboards.html
+++ b/client/app/products/leaderboards.html
@@ -2,7 +2,7 @@
 	<ul class="list-group">
 	  <li class="list-group-item" ng-repeat='item in rankings'>
 	  	<span>Title: {{item.title}}</span>
-	  	<span>Title: <img src="/assets/redirect_icon.png"/> </span>
+	  	<span> <img src="/assets/redirect_icon.png"/> </span>
 	  </li>
 	</ul>
 </div>
