--- a/client/app/products/create.html
+++ b/client/app/products/create.html
@@ -1,17 +1,27 @@
+<a href="#/homescreen">Homepage</a>
+
 <div class="container-fluid" style="background-color:black;">  
   <div class="row-fluid">
-    <form>
+    <form name='prodForm' ng-submit="create()" novalidate>
       <div class="form-group">
         <label>Username</label>
         <input type="username" class="form-control" id="usernameForm" placeholder="username">
       </div>
       <div class="form-group">
         <label>Title</label>
-        <input type="text" class="form-control" id="titleForm" placeholder="title">
+        <input ng-model='search1' type="text" class="form-control" id="titleForm" placeholder="title">
+      </div>
+      <div class="form-group">
+        <label>Website</label>
+        <input ng-model='search2' type="text" class="form-control" id="websiteForm" placeholder="Website">
       </div>
       <div class="form-group">
         <label>Picture</label>
-        <input type="file" id="fileForm">
+        <input ng-model='search3' type="file" id="fileForm">
+      </div>
+      <div class="form-group">
+        <label>Description</label>
+        <input ng-model='search4' type="text" class="form-control" id="titleForm" placeholder="title">
       </div>
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
