--- a/client/app/products/leaderboards.html
+++ b/client/app/products/leaderboards.html
@@ -1,8 +1,11 @@
+<a href="#/homescreen">Homepage</a>
+
 <div class='container'>
 	<ul class="list-group">
 	  <li class="list-group-item" ng-repeat='item in rankings'>
 	  	<span>Title: {{item.title}}</span>
 	  	<span> <img src="/assets/redirect_icon.png"/> </span>
+	  	<span>Website: {{item.link}}</span>
 	  </li>
 	</ul>
 </div>
