--- a/client/app/products/matchups.html
+++ b/client/app/products/matchups.html
@@ -1,16 +1,20 @@
+<a href="#/homescreen">Homepage</a>
+
 <div class = 'container-fluid'>
 	<div row = 'row-fluid'>
 		<div class='col-md-6' ng-model="product1">
-	  	<button ng-click='newMatch' type-'button' class="btn btn-success">Vote for Me</button>
+	  	<button ng-click='newMatch(1)' type="button" class="btn btn-success">Vote for Me</button>
 			<span>Title: {{product1.title}}</span>
 	  	<span> <img src="/assets/redirect_icon.png"/> </span>
+	  	<span>Website: {{product1.link}}</span>
 	  	<span>Description: {product1.description} </span>
 		</div>
 
 		<div class='col-md-6' ng-model="product2">
-	  	<button ng-click='newMatch' type="button" class="btn btn-success">Vote for Me</button>
+	  	<button ng-click='newMatch(2)' type="button" class="btn btn-success">Vote for Me</button>
 			<span>Title: {{product1.title}}</span>
 	  	<span> <img src="/assets/redirect_icon.png"/> </span>
+	  	<span>Website: {{product1.link}}</span>
 	  	<span>Description: {product1.description} </span>
 		</div>	
 	</div>
